Bug 1383007 - Move the declaration in the #ifdef declaration to silent a warning r=jld Otherwise, a warning is triggered because the statement will never be executed [-

Found with -Wswitch-unreachable with gcc 7

MozReview-Commit-ID: FVStzyFlhJp